libs/image/kis_lod_transform.h
@@ -66,6 +66,14 @@ public:
         return m_transform.mapRect(rc);
     }
 
+    QRectF mapInverted(const QRectF &rc) const {
+        return m_transform.inverted().mapRect(rc);
+    }
+
+    QRect mapInverted(const QRect &rc) const {
+        return m_transform.inverted().mapRect(rc);
+    }
+
     KisPaintInformation map(KisPaintInformation pi) const {
         QPointF pos = pi.pos();
         pi.setPos(m_transform.map(pos));
